--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.example</groupId>
+    <groupId>tech.gesp.esb</groupId>
     <artifactId>EnhancedShulkerBoxes</artifactId>
     <version>1.1</version>
 
@@ -28,11 +28,9 @@
                 <version>3.2.1</version>
                 <configuration>
                     <relocations>
-                        <!-- Using the maven-shade-plugin to shade and relocate the UpdateChecker -->
-                        <!-- Replace "your.package" with your plugin's package name -->
                         <relocation>
                             <pattern>de.jeff_media.updatechecker</pattern>
-                            <shadedPattern>tech.gesp.updatechecker</shadedPattern>
+                            <shadedPattern>tech.gesp.esb.updatechecker</shadedPattern>
                         </relocation>
                     </relocations>
                 </configuration>
@@ -44,6 +42,14 @@
                         </goals>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>11</source>
+                    <target>11</target>
+                </configuration>
             </plugin>
         </plugins>
     </build>
